# zbox

./: .gitignore  .travis.sh  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile.am  README.md  build.rs  configure.ac  libzbox.pc.in  rustfmt.toml
.cargo/: config
.github/workflows/: rust.yml
docker/: android.docker  base.docker  libsodium-wasm.patch  wasm.docker
examples/: copy_in_out.rs  hello_world.rs  utf8.rs  zbox.rs
src/: error.rs  ffi.rs  file.rs  jni_lib.rs  lib.rs  repo.rs  version.rs  wasm.rs
src/base/: crypto.rs  lru.rs  lz4.rs  mod.rs  refcnt.rs  time.rs  utils.rs  version.rs  vio.rs  wasm_logger.rs
src/binding/: ffi.rs  jni_lib.rs  mod.rs  nodejs.rs  wasm.rs
src/content/: chunk.rs  chunker.rs  content.rs  content_map.rs  entry.rs  merkle_tree.rs  mod.rs  segment.rs  span.rs  store.rs
src/content/chunker/: leap.rs
src/ffi/: ffi.c  ffi.rs  mod.rs
src/ffi/include/: Makefile.am  zbox.h
src/ffi/include/zbox/: common.h  error.h  ffi.h  file.h  repo.h  version.h  version.h.in
src/fs/: fnode.rs  fs.rs  mod.rs
src/jni_lib/: jni.rs  mod.rs
src/jni_lib/io/zbox/: Cipher.java  DirEntry.java  Env.java  File.java  FileType.java  MemLimit.java  Metadata.java  OpenOptions.java  OpsLimit.java  Repo.java  RepoInfo.java  RepoOpener.java  SeekFrom.java  Version.java  VersionReader.java  ZboxException.java
src/trans/: armor.rs  cow.rs  eid.rs  mod.rs  trans.rs  txid.rs  txmgr.rs  wal.rs
src/volume/: address.rs  allocator.rs  armor.rs  emap.rs  mod.rs  super_blk.rs  super_block.rs  txlog.rs  volume.rs
src/volume/storage/: faulty_ctl.rs  index_mgr.rs  mod.rs  space.rs  span.rs  storage.rs
src/volume/storage/faulty/: faulty.rs  mod.rs
src/volume/storage/file/: emap.rs  file.rs  file_armor.rs  index.rs  mod.rs  sector.rs  span.rs  vio.rs
src/volume/storage/mem/: mem.rs  mod.rs
src/volume/storage/redis/: mod.rs  redis.rs
src/volume/storage/sqlite/: mod.rs  sqlite.rs
src/volume/storage/zbox/: emap.rs  estore.rs  http_client.rs  index.rs  index_accessor.rs  local_cache.rs  mod.rs  sector.rs  session.rs  zbox.rs
src/volume/storage/zbox/local_cache/: browser.rs  file.rs  local_cache.rs  mem.rs  mod.rs  wasm.rs
src/volume/storage/zbox/transport/: faulty.rs  jni.rs  mod.rs  native.rs  wasm.rs
tests/: JniTest.java  dir.rs  ffi.c  ffi.rs  file.rs  fuzz.rs  fuzz_dir.rs  fuzz_file.rs  fuzz_fs.rs  fuzz_read_write.rs  jni.rs  perf.rs  repo.rs
tests/common/: controller.rs  crypto.rs  fuzz.rs  fuzzer.rs  mod.rs
